<?xml version="1.0"?>
<package format="3">
  <name>k1muse_control_core</name>
  <version>0.1.0</version>
  <description>Portable C protocol, planning, and pick-place state-machine core.</description>
  <maintainer email="maintainer@example.com">K1MUSE Maintainer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
