<?xml version="1.0"?>
<package format="3">
  <name>k1muse_control_manager</name>
  <version>0.1.0</version>
  <description>Control manager with mock task executor for K1MUSE robot.</description>
  <maintainer email="maintainer@example.com">K1MUSE Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>k1muse_common</depend>
  <depend>k1muse_control_core</depend>
  <depend>k1muse_manager_msgs</depend>
  <depend>k1muse_vision_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
