<?xml version="1.0"?>
<package format="3">
  <name>k1muse_task_manager</name>
  <version>0.1.0</version>
  <description>Task manager node: subscribes /voice/intent, filters action intents, sends ExecuteTask goals, publishes TaskStatus.</description>
  <maintainer email="maintainer@example.com">K1MUSE Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>k1muse_common</depend>
  <depend>k1muse_voice_msgs</depend>
  <depend>k1muse_manager_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
